Running the Analysis

--- a/BikeShare.ipynb
+++ b/BikeShare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,12 +90,13 @@
     "                    day = day_name\n",
     "                    break\n",
     "        break\n",
+    "    print(city, month, day)\n",
     "    return city, month, day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,12 +338,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Let's explore some US bikeshare data!\n",
+      "Chicago All All\n",
+      "\n",
+      "Calculating The Most Frequent Times of Travel...\n",
+      "\n",
+      "The most common month for your choosen filter is June and Its counts are 98081 Trips\n",
+      "The most common day of week is Tuesday and Its counts are 45912 times\n",
+      "The most common hour at 17 and Its counts are 35992 times\n",
+      "\n",
+      "This took 0.23032712936401367 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating The Most Popular Stations and Trip...\n",
+      "\n",
+      "The most commonly used as start station Streeter Dr & Grand Ave and Its counts are 6911 times\n",
+      "The most commonly used as End Station Streeter Dr & Grand Ave and Its counts are 7512 times\n",
+      "The most frequent combination of start station and end station trip ('Lake Shore Dr & Monroe St', 'Streeter Dr & Grand Ave') and Its counts are 854 times\n",
+      "\n",
+      "This took 0.17213988304138184 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating Trip Duration...\n",
+      "\n",
+      "Total travel time is 280871787 minutes and is equal to 534.0 years, 0.0 months, 5 days, 20 hours, and 27 minutes.\n",
+      "Mean travel time is 936.24 minutes and is equal to 0.0 days, 15.0 hours, and 36.24 minutes.\n",
+      "\n",
+      "This took 0.00042128562927246094 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating User Stats...\n",
+      "\n",
+      "Subscriber count: 238889\n",
+      "Customer count: 61110\n",
+      "Dependent count: 1\n",
+      "Male count: 181190\n",
+      "Female count: 57758\n",
+      "Most earliest Birth Year is 1899\n",
+      "Most Recent Birth Year is 2016\n",
+      "Most Common Year Of Birth Is 1989 ! 14666 was born that year\n",
+      "\n",
+      "This took 0.03657388687133789 seconds.\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "\tmain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Let's explore some US bikeshare data!\n",
+      "New York City All All\n",
+      "\n",
+      "Calculating The Most Frequent Times of Travel...\n",
+      "\n",
+      "The most common month for your choosen filter is June and Its counts are 76022 Trips\n",
+      "The most common day of week is Wednesday and Its counts are 52087 times\n",
+      "The most common hour at 17 and Its counts are 30041 times\n",
+      "\n",
+      "This took 0.2312462329864502 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating The Most Popular Stations and Trip...\n",
+      "\n",
+      "The most commonly used as start station Pershing Square North and Its counts are 3069 times\n",
+      "The most commonly used as End Station Pershing Square North and Its counts are 3077 times\n",
+      "The most frequent combination of start station and end station trip ('E 7 St & Avenue A', 'Cooper Square & E 7 St') and Its counts are 168 times\n",
+      "\n",
+      "This took 0.1792759895324707 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating Trip Duration...\n",
+      "\n",
+      "Total travel time is 269905248 minutes and is equal to 513.0 years, 1.0 months, 30 days, 4 hours, and 48 minutes.\n",
+      "Mean travel time is 899.68 minutes and is equal to 0.0 days, 14.0 hours, and 59.68 minutes.\n",
+      "\n",
+      "This took 0.00040602684020996094 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating User Stats...\n",
+      "\n",
+      "Subscriber count: 269149\n",
+      "Customer count: 30159\n",
+      "No Dependent Users\n",
+      "Male count: 204008\n",
+      "Female count: 66783\n",
+      "Most earliest Birth Year is 1885\n",
+      "Most Recent Birth Year is 2001\n",
+      "Most Common Year Of Birth Is 1989 ! 11126 was born that year\n",
+      "\n",
+      "This took 0.03682589530944824 seconds.\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "\tmain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Let's explore some US bikeshare data!\n",
+      "Washington All All\n",
+      "\n",
+      "Calculating The Most Frequent Times of Travel...\n",
+      "\n",
+      "The most common month for your choosen filter is June and Its counts are 68339 Trips\n",
+      "The most common day of week is Wednesday and Its counts are 48156 times\n",
+      "The most common hour at 8 and Its counts are 33019 times\n",
+      "\n",
+      "This took 0.22802495956420898 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating The Most Popular Stations and Trip...\n",
+      "\n",
+      "The most commonly used as start station Columbus Circle / Union Station and Its counts are 5656 times\n",
+      "The most commonly used as End Station Columbus Circle / Union Station and Its counts are 6048 times\n",
+      "The most frequent combination of start station and end station trip ('Jefferson Dr & 14th St SW', 'Jefferson Dr & 14th St SW') and Its counts are 673 times\n",
+      "\n",
+      "This took 0.1655430793762207 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating Trip Duration...\n",
+      "\n",
+      "Total travel time is 371183985.484 minutes and is equal to 705.0 years, 8.0 months, 21 days, 15.0 hours, and 45.48400002717972 minutes.\n",
+      "Mean travel time is 1237.28 minutes and is equal to 0.0 days, 20.0 hours, and 37.28 minutes.\n",
+      "\n",
+      "This took 0.0005519390106201172 seconds.\n",
+      "----------------------------------------\n",
+      "\n",
+      "Calculating User Stats...\n",
+      "\n",
+      "Subscriber count: 220786\n",
+      "Customer count: 79214\n",
+      "No Dependent Users\n",
+      "No Gender Data\n",
+      "No Birth Year Data\n",
+      "\n",
+      "This took 0.014932870864868164 seconds.\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "\tmain()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details><summary>Done By</summary>\n",
+    "<center> Ahmed NasrElDin </center> \n",
+    "</details>\n"
    ]
   }
  ],
